k8s/job.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-go
