k8s/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-go
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-go-api
  namespace: test-go
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-go-api
  template:
    metadata:
      labels:
        app: test-go-api
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: app
          image: ghcr.io/algnot/test-go-api:__IMAGE_TAG__
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
