k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-go
  namespace: test-go
spec:
  type: ClusterIP
  selector:
    app: test-go-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
