k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-go
  namespace: test-go
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, Device-ID"
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - test-go.tongla.dev
      secretName: test-go-tls
  rules:
    - host: test-go.tongla.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-go
                port:
                  number: 80
